--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,9 @@
     margin: 0;
     padding: 0;
 }
-
+.enter:hover{
+    cursor:pointer;
+}
 body {
     background-color: #fafafa;
     height: 100vh;
